possible URLClassLoader argument fix